# quickcheck-groups

./: CHANGELOG.md  README.md  Test-QuickCheck-Classes-Group.html  Test-QuickCheck-Classes-Monoid-GCD.html  Test-QuickCheck-Classes-Monoid-Null.html  Test-QuickCheck-Classes-Semigroup-Cancellative.html  Test-QuickCheck-Classes-Semigroup.html  cabal.project.local  doc-index.html  doc-index.json  index.html  quickcheck-classes-groups.cabal  quickcheck-classes-groups.haddock  quickcheck-classes-semigroup.cabal  quickcheck-groups.cabal  quickcheck-groups.haddock  quickcheck-monoid-subclasses.cabal  quickcheck-monoid-subclasses.haddock
.github/workflows/: build.yml
src/: Test.QuickCheck.Classes.Group.html  Test.QuickCheck.Classes.Monoid.GCD.html  Test.QuickCheck.Classes.Monoid.Null.html  Test.QuickCheck.Classes.Semigroup.Cancellative.html  Test.QuickCheck.Classes.Semigroup.html
src/internal/: Internal.hs
src/internal/Data/Semigroup/: Eq.hs
src/internal/Internal/Semigroup/: Eq.hs  Tuple.hs
src/internal/Test/QuickCheck/Classes/Group/: Internal.hs  Tuple.hs
src/prelude/Internal/: Prelude.hs
src/prelude/Test/QuickCheck/Classes/Group/: Prelude.hs
src/public/Test/QuickCheck/Classes/: Group.hs
src/quickcheck-classes-groups-prelude/Test/QuickCheck/Classes/Group/: Prelude.hs
src/quickcheck-classes-groups-test/Test/QuickCheck/Classes/: GroupSpec.hs
src/quickcheck-classes-semigroup-internal/Data/Semigroup/: Eq.hs
src/quickcheck-classes-semigroup-internal/Test/QuickCheck/Classes/Semigroup/: Tuple.hs
src/quickcheck-classes-semigroup-prelude/Test/QuickCheck/Classes/Semigroup/: Prelude.hs
src/quickcheck-classes-semigroup-test/Test/QuickCheck/Classes/: SemigroupSpec.hs
src/quickcheck-classes-semigroup/Test/QuickCheck/Classes/: Semigroup.hs
src/quickcheck-groups-internal/Data/Semigroup/: Eq.hs
src/quickcheck-groups-internal/Test/QuickCheck/Classes/Group/: Internal.hs
src/quickcheck-groups-test/Test/QuickCheck/Classes/: GroupSpec.hs  SemigroupSpec.hs
src/quickcheck-groups/Test/QuickCheck/Classes/: Group.hs  Semigroup.hs
src/quickcheck-groups/Test/QuickCheck/Classes/Monoid/: GCD.hs  Null.hs
src/quickcheck-groups/Test/QuickCheck/Classes/Semigroup/: Cancellative.hs
src/quickcheck-monoid-subclasses-internal/Data/Semigroup/: Eq.hs
src/quickcheck-monoid-subclasses-internal/Test/QuickCheck/Classes/Semigroup/: Internal.hs  Tuple.hs
src/quickcheck-monoid-subclasses-test/Test/QuickCheck/Classes/: Hspec.hs  SemigroupSpec.hs
src/quickcheck-monoid-subclasses-test/Test/QuickCheck/Monoid/: SubclassesSpec.hs
src/quickcheck-monoid-subclasses/Test/QuickCheck/Classes/: Semigroup.hs
src/quickcheck-monoid-subclasses/Test/QuickCheck/Monoid/: Subclasses.hs
src/test/: ClassSpec.hs
src/test/Test/Hspec/: Laws.hs
src/test/Test/QuickCheck/Classes/: GroupSpec.hs
