cabal-version:  3.0
name:           quickcheck-classes-groups
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-classes-groups/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the groups library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'groups' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-classes-groups

library
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-classes-groups
    exposed-modules:
        Test.QuickCheck.Classes.Group
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , groups
      , QuickCheck
      , quickcheck-classes
      , quickcheck-classes-groups-internal

library quickcheck-classes-groups-internal
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-classes-groups-internal
    exposed-modules:
        Data.Semigroup.Eq
        Test.QuickCheck.Classes.Group.Internal
        Test.QuickCheck.Classes.Group.Tuple
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , QuickCheck
      , pretty-show
      , semigroupoids

library quickcheck-classes-groups-prelude
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-classes-groups-prelude
    exposed-modules:
        Test.QuickCheck.Classes.Group.Prelude
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , containers
      , groups
      , QuickCheck
      , quickcheck-classes-groups
      , quickcheck-classes-groups-internal
      , quickcheck-instances

test-suite quickcheck-classes-groups-test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/quickcheck-classes-groups-test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Classes.GroupSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , bytestring
      , containers
      , groups
      , hspec
      , QuickCheck
      , quickcheck-classes
      , quickcheck-classes-groups
      , quickcheck-instances
      , text
