cabal-version:  3.0
name:           quickcheck-classes-semigroup
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-classes-semigroup/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       Support for testing Semigroup subclass instances with QuickCheck
description:
    Support for testing Semigroup subclass instances with QuickCheck.

extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-classes-semigroup

library
    hs-source-dirs:
        src/quickcheck-classes-semigroup
    exposed-modules:
        Test.QuickCheck.Classes.Semigroup
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes

test-suite quickcheck-classes-semigroup-test
    main-is:
        Spec.hs
    hs-source-dirs:
        src/quickcheck-classes-semigroup-test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Classes.SemigroupSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , bytestring
      , containers
      , hspec
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes
      , quickcheck-classes-semigroup
      , quickcheck-instances
      , text
