cabal-version:  3.0
name:           quickcheck-groups
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-groups/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022–2023 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the groups library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'groups' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-groups

library
    import:
        common-extensions
    hs-source-dirs:
        src/public
    exposed-modules:
        Test.QuickCheck.Classes.Group
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , groups
      , QuickCheck
      , quickcheck-classes
      , quickcheck-groups:internal

library internal
    import:
        common-extensions
    hs-source-dirs:
        src/internal
    exposed-modules:
        Internal
        Internal.Semigroup.Eq
        Test.QuickCheck.Classes.Group.Tuple
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , pretty-show
      , QuickCheck
      , semigroupoids

library prelude
    import:
        common-extensions
    hs-source-dirs:
        src/prelude
    exposed-modules:
        Test.QuickCheck.Classes.Group.Prelude
    default-language:
        Haskell2010
    build-depends:
      , base >=4.7 && <5
      , containers
      , groups
      , QuickCheck
      , quickcheck-groups
      , quickcheck-groups:internal
      , quickcheck-instances

test-suite test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Classes.GroupSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
      , base >=4.7 && <5
      , bytestring
      , containers
      , groups
      , hspec
      , QuickCheck
      , quickcheck-classes
      , quickcheck-groups
      , quickcheck-instances
      , text
