cabal-version:  3.0
name:           quickcheck-monoid-subclasses
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-monoid-subclasses/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for Monoid subclasses
description:
    QuickCheck support for Monoid subclasses.

extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-monoid-subclasses

library
    hs-source-dirs:
        src/quickcheck-monoid-subclasses
    exposed-modules:
        Test.QuickCheck.Monoid.Subclasses
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes

test-suite quickcheck-monoid-subclasses-test
    main-is:
        Spec.hs
    hs-source-dirs:
        src/quickcheck-monoid-subclasses-test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Monoid.SubclassesSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , hspec
      , QuickCheck
      , quickcheck-classes
