cabal-version:  3.0
name:           quickcheck-monoid-subclasses
version:        0.0.0
bug-reports:    https://github.com/jonathanknowles/quickcheck-monoid-subclasses/issues
license:        Apache-2.0
license-file:   LICENSE
author:         Jonathan Knowles
maintainer:     mail@jonathanknowles.net
copyright:      2022 Jonathan Knowles
category:       Testing
synopsis:       QuickCheck support for testing instances of classes defined in
                the monoid-subclasses library.
description:

    This library provides:

    * QuickCheck support for testing instances of classes defined in the
      'monoid-subclasses' library.
    * Reusable properties in the form of 'Laws' definitions.

extra-source-files:
    README.md

common common-extensions
    default-extensions:
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        ViewPatterns

source-repository head
    type: git
    location: https://github.com/jonathanknowles/quickcheck-monoid-subclasses

library
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-monoid-subclasses
    exposed-modules:
        Test.QuickCheck.Classes.Semigroup
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , groups
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes
      , quickcheck-monoid-subclasses-internal

library quickcheck-monoid-subclasses-internal
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-monoid-subclasses-internal
    exposed-modules:
        Data.Semigroup.Eq
        Test.QuickCheck.Classes.Semigroup.Internal
        Test.QuickCheck.Classes.Semigroup.Tuple
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , QuickCheck
      , pretty-show
      , semigroupoids

library quickcheck-monoid-subclasses-prelude
    import:
        common-extensions
    hs-source-dirs:
        src/quickcheck-monoid-subclasses-prelude
    exposed-modules:
        Test.QuickCheck.Classes.Semigroup.Prelude
    default-language:
        Haskell2010
    build-depends:
        base >=4.7 && <5
      , containers
      , groups
      , monoid-subclasses
      , QuickCheck
      , quickcheck-monoid-subclasses
      , quickcheck-monoid-subclasses-internal
      , quickcheck-instances

test-suite quickcheck-monoid-subclasses-test
    import:
        common-extensions
    main-is:
        Spec.hs
    hs-source-dirs:
        src/quickcheck-monoid-subclasses-test
    other-modules:
        Test.QuickCheck.Classes.Hspec
        Test.QuickCheck.Classes.SemigroupSpec
    type: exitcode-stdio-1.0
    default-language:
        Haskell2010
    build-tool-depends:
        hspec-discover:hspec-discover ==2.*
    build-depends:
        base >=4.7 && <5
      , bytestring
      , containers
      , groups
      , hspec
      , monoid-subclasses
      , QuickCheck
      , quickcheck-classes
      , quickcheck-monoid-subclasses
      , quickcheck-instances
      , text
